# igraphpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMakeModules/: FindCatch.cmake  FindIGRAPH.cmake
examples/: CMakeLists.txt  erdos_renyi.cpp  hello_world.cpp  lesson1.cpp  lesson2.cpp  lesson3.cpp  vector.cpp
igraphpp/: edge_iterator.hpp  edge_iterator_impl.hpp  edge_selector.hpp  edge_selector_impl.hpp  error.hpp  exception.hpp  graph.hpp  graph_impl.hpp  igraph.hpp  mapper.hpp  matrix.hpp  matrix_impl.hpp  template.hpp  util.hpp  vector.hpp  vector_impl.hpp  vectorptr.hpp  vectorptr_impl.hpp  vertex_iterator.hpp  vertex_iterator_impl.hpp  vertex_selector.hpp  vertex_selector_impl.hpp
src/: CMakeLists.txt  edge_iterator.cpp  edge_selector.cpp  graph.cpp  igraph.cpp  matrix.cpp  vector.cpp  vertex_iterator.cpp  vertex_selector.cpp
test/: CMakeLists.txt  EdgeIterator.cpp  EdgeSelector.cpp  Graph.cpp  Matrix.cpp  Vector.cpp  VectorPtr.cpp  VectorView.cpp  VertexIterator.cpp  VertexSelector.cpp  pajek.net
